@@ -562,7 +562,7 @@ argument_list|)
 throw|;
 block|}
 block|}
-comment|/**    * Evaluate the variance using the following modification of the formula from    * The Art of Computer Programming, vol. 2, p. 232:    *     * variance = variance1 + variance2 + n*alpha^2 + m*betha^2    *     * where: - variance is sum[x-avg^2] (this is actually n times the variance)    * and is updated at every step. - n is the count of elements in chunk1 - m is    * the count of elements in chunk2 - alpha = avg-a - betha = avg-b - avg is    * the the average of all elements from both chunks - a is the average of    * elements in chunk1 - b is the average of elements in chunk2    *     */
+comment|/**    * Evaluate the variance using the algorithm described by Chan, Golub, and LeVeque in    * "Algorithms for computing the sample variance: analysis and recommendations"    * The American Statistician, 37 (1983) pp. 242--247.    *     * variance = variance1 + variance2 + n/(m*(m+n)) * pow(((m/n)*t1 - t2),2)    *     * where: - variance is sum[x-avg^2] (this is actually n times the variance)    * and is updated at every step. - n is the count of elements in chunk1 - m is    * the count of elements in chunk2 - t1 = sum of elements in chunk1, t2 =     * sum of elements in chunk2.    *    * This algorithm was proven to be numerically stable by J.L. Barlow in    * "Error analysis of a pairwise summation algorithm to compute sample variance"    * Numer. Math, 58 (1991) pp. 583--590    *     */
 specifier|public
 specifier|static
 class|class
@@ -1060,85 +1060,6 @@ argument_list|,
 name|inputOI
 argument_list|)
 decl_stmt|;
-if|if
-condition|(
-name|myagg
-operator|.
-name|count
-operator|!=
-literal|0
-condition|)
-block|{
-comment|// if count==0 => the variance is going to be
-comment|// 0
-comment|// after 1 iteration
-name|double
-name|alpha
-init|=
-operator|(
-name|myagg
-operator|.
-name|sum
-operator|+
-name|v
-operator|)
-operator|/
-operator|(
-name|myagg
-operator|.
-name|count
-operator|+
-literal|1
-operator|)
-operator|-
-name|myagg
-operator|.
-name|sum
-operator|/
-name|myagg
-operator|.
-name|count
-decl_stmt|;
-name|double
-name|betha
-init|=
-operator|(
-name|myagg
-operator|.
-name|sum
-operator|+
-name|v
-operator|)
-operator|/
-operator|(
-name|myagg
-operator|.
-name|count
-operator|+
-literal|1
-operator|)
-operator|-
-name|v
-decl_stmt|;
-comment|// variance = variance1 + variance2 + n*alpha^2 + m*betha^2
-comment|// => variance += n*alpha^2 + betha^2
-name|myagg
-operator|.
-name|variance
-operator|+=
-name|myagg
-operator|.
-name|count
-operator|*
-name|alpha
-operator|*
-name|alpha
-operator|+
-name|betha
-operator|*
-name|betha
-expr_stmt|;
-block|}
 name|myagg
 operator|.
 name|count
@@ -1150,6 +1071,56 @@ name|sum
 operator|+=
 name|v
 expr_stmt|;
+if|if
+condition|(
+name|myagg
+operator|.
+name|count
+operator|>
+literal|1
+condition|)
+block|{
+name|double
+name|t
+init|=
+name|myagg
+operator|.
+name|count
+operator|*
+name|v
+operator|-
+name|myagg
+operator|.
+name|sum
+decl_stmt|;
+name|myagg
+operator|.
+name|variance
+operator|+=
+operator|(
+name|t
+operator|*
+name|t
+operator|)
+operator|/
+operator|(
+operator|(
+name|double
+operator|)
+name|myagg
+operator|.
+name|count
+operator|*
+operator|(
+name|myagg
+operator|.
+name|count
+operator|-
+literal|1
+operator|)
+operator|)
+expr_stmt|;
+block|}
 block|}
 catch|catch
 parameter_list|(
@@ -1433,45 +1404,34 @@ argument_list|(
 name|partialSum
 argument_list|)
 decl_stmt|;
+name|myagg
+operator|.
+name|count
+operator|+=
+name|m
+expr_stmt|;
+name|myagg
+operator|.
+name|sum
+operator|+=
+name|b
+expr_stmt|;
 name|double
-name|alpha
+name|t
 init|=
 operator|(
-name|a
-operator|+
-name|b
-operator|)
+name|m
 operator|/
 operator|(
-name|n
-operator|+
-name|m
-operator|)
-operator|-
-name|a
-operator|/
-name|n
-decl_stmt|;
 name|double
-name|betha
-init|=
-operator|(
-name|a
-operator|+
-name|b
 operator|)
-operator|/
-operator|(
 name|n
-operator|+
-name|m
 operator|)
+operator|*
+name|a
 operator|-
 name|b
-operator|/
-name|m
 decl_stmt|;
-comment|// variance = variance1 + variance2 + n*alpha^2 + m*betha^2
 name|myagg
 operator|.
 name|variance
@@ -1484,30 +1444,28 @@ name|partialVariance
 argument_list|)
 operator|+
 operator|(
+operator|(
 name|n
-operator|*
-name|alpha
-operator|*
-name|alpha
+operator|/
+operator|(
+name|double
+operator|)
+name|m
+operator|)
+operator|/
+operator|(
+operator|(
+name|double
+operator|)
+name|n
 operator|+
 name|m
-operator|*
-name|betha
-operator|*
-name|betha
 operator|)
-expr_stmt|;
-name|myagg
-operator|.
-name|count
-operator|+=
-name|m
-expr_stmt|;
-name|myagg
-operator|.
-name|sum
-operator|+=
-name|b
+operator|)
+operator|*
+name|t
+operator|*
+name|t
 expr_stmt|;
 block|}
 block|}
